 # [#28382] Make Atomic work with sample data. Thanks Elin
 # [#28339] Incorrect parameter passed to onUserAfterDeleteGroup event. Thanks Dennis
 # [#28149] ImageManager Javascript Error. Thanks Benjamin
 # [#28364] JImage wrong JPEG support detection in PHP 5.2. Thanks Pavel and Rouven
 # [#28276] Finder/Smart Search: Deleting an item does not remove it from Finder's index. Thanks CY Lee

10-Apr-2012 Christophe Demko
 ^ [#28336] e-strict error in com_messages (Elin Waring)

10-Apr-2012 Jean-Marie Simonet
 # [#28287] Fix some differences between platform and cms. Backport CSS changes. Thanks Rouven
 # [#28384] Duplicate 'home' in breadcrumbs in a multi-language site. Thanks Nuno.

09-Apr-2012 Christophe Demko
 # [ #24839] Incorrect tooltip for Sticky column icons in Banner Manager: Banners
 - [#28360] Get rid of assign() and assignRefs() uses in view: Installation (Rouven Weßling)
 -+ [#28305] Remove a few unnecessary import() calls. Add a missing import(). (Rouven Weßling)

07-Apr-2012 Jean-Marie Simonet
 # [#28345] Call to member function of non-object: setDebug(). Thanks Don.

03-Apr-2012 Mark Dexter
 # [#28354] Problem logging out if Public group has admin login permission
 # [#28342] *New joomlaupdate component has no icon in admin menu + missing lang string
 # [#27772] Selecting 'Install Sample Data' button causes 'invalid security token' error message if 'Next' button clicked too fast

-------------------- 2.5.4 Stable Release [2-April-2012] ------------------

31-Mar-2012 Mark Dexter
 # [#28329] Joomla Update component requires Purge Cache to change Update Server

30-Mar-2012 Mark Dexter
 # Sample data fixes for SQL Server
 # [#28316] Incorrect ordering value if editing last module
 # [#28325] Deleted files not being deleted during version update

29-Mar-2012 Mark Dexter
 # [#28323] com_joomlaupdate does not delete joomla.xml file in root folder
 # [#28318] Remove duplicate SQL Server directories.

29-Mar-2012 Christophe Demko